--- a/BaseFrame/src/main/res/layout/banner.xml
+++ b/BaseFrame/src/main/res/layout/banner.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:clipChildren="false">
 
-    <com.jnevision.laibobio.widget.BannerViewPager
+    <com.base.frame.widget.banner.BannerViewPager
         android:id="@id/bannerViewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
